# silly-sync

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yml
backend/: .dev.vars  Cargo.toml  package-lock.json  package.json  wrangler.toml
backend/src/: error.rs  lib.rs  oauth.rs  session_store.rs  spectrum-cards.json  sync.rs  user.rs  ws.rs
dev-backend/: Cargo.toml
dev-backend/src/: main.rs
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  index.ts
