[package]
name = "dev-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, default-features = true }
backend = { path = "../backend" }
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
